Fjerner institusjon fra regelmodellen for nødvendighet